[build-system]
requires = ["setuptools>=49.5.0", "wheel", "setuptools_scm[toml]>=3.4.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pypack/_version.py"
write_to_template = "__version__ = \"{version}\"\n"


[tool.pytest.ini_options]
addopts = "--cov=pypack --cov=tests"
