[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis@example.com
name = pypack
keywords = pypack
description= A demo package to show how cookiecutter-pypack renders.
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
url = https://github.com/ashwinvis/pypack
include_package_data = True
zip_safe = False

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
install_requires =

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx
    myst-parser
    myst-nb
    sphinx-copybutton
    sphinx-material
    numpydoc

dev =
    %(docs)s
    wathchdog
    tox
    twine
    readme-renderer[md]

[options.entry_points]
setuptools.file_finders =
    setuptools_scm = setuptools_scm.integration:find_files

console_scripts =
    pypack = pypack.cli:main

[flake8]
ignore = E501,W503,W505
exclude = docs

[isort]
known_first_party = pypack
multi_line_output = 3
